# digital-picture-frame

./: .gitignore  AGENTS.md  Cargo.toml  Cross.toml  LICENSE  Makefile  PLAN.md  README.md  SPEC.md  dist-workspace.toml  frame-config.json.example  justfile  main.py  pyproject.toml
.github/: CODEOWNERS  CONTRIBUTING.md  dependabot.yml
.github/workflows/: build.yml  ci.yml  release-arm32.yml  release.yml  tests.yml  update-dependencies.yml
c/: Containerfile  Makefile  display_logic.c  display_logic.h  photo-frame-display  photo-frame-display-client.c  photo-frame-display-client.py  photo-frame-display.c  photo_frame.c  photo_frame_client.c  photo_frame_client.py  test_display_logic  test_display_logic.c
demos/: fade_display.c  image_display.c  main.c
docs/: adding-new-files.md  building.md  common-tasks.md  config.md  deployment.md  design-decisions.md  running.md  style.md  testing.md
packaging/: config.toml  display.env  photo-frame-display.service  photo-frame-manager.service
packaging/deb-scripts/: postinst  prerm
plans/: CI_PLAN.md  INITIAL_PLAN.md  SPEC.md
src/: app.rs  config.rs  display.rs  import.rs  index.rs  lib.rs  logger.rs  main.rs  memory.rs  photos.rs  ui.rs
src/picture_frame_ui/: __init__.py  config.py  config_test.py  importer.py  importer_test.py  photos.py  photos_test.py  ui.py
