[package]
name = "picture-frame-ui"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0"
repository = "https://github.com/dmikusa/digital-picture-frame"

[dependencies]
env_logger = "0.11.8"
log = "0.4.28"
anyhow = "1.0.100"
url = "2.5.7"
sysinfo = "0.37.2"
gtk4 = "0.10"

[dev-dependencies]
tempfile = "3.0"
