[package]
name = "photo-frame-manager"
version = "0.1.0"
description = "A Rust manager for a DRM/GBM/EGL digital photo frame, paired with a C display app."
license = "AGPL-3.0-or-later"
edition = "2021"

[profile.release]
opt-level = "z"
lto = true

[dependencies]
notify = "6"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
log = { version = "0.4", features = ["std"] }
crc32fast = "1.3"
signal-hook = "0.3"
chrono = "0.4"
flate2 = "1"
libc = "0.2"

[package.metadata.deb]
maintainer = "Daniel Mikusa <dan@mikusa.com>"
section = "graphics"
priority = "optional"
depends = "$auto, imagemagick, libdrm2, libegl1-mesa, libgbm1"
recommends = "usbmount"
assets = [
    ["target/release/photo-frame-manager", "usr/bin/photo-frame-manager", "755"],
    ["c/photo-frame-display", "usr/bin/photo-frame-display", "755"],
    ["packaging/config.toml", "etc/photo-frame/config.toml", "644"],
    ["packaging/display.env", "etc/photo-frame/display.env", "644"],
    ["packaging/photo-frame-display.service", "lib/systemd/system/", "644"],
    ["packaging/photo-frame-manager.service", "lib/systemd/system/", "644"],
]
maintainer-scripts = "packaging/deb-scripts/"

[dev-dependencies]
tempfile = "3"
